--- a/www/index.html
+++ b/www/index.html
@@ -68,7 +68,7 @@
                         <img src="img/vessel.png"/>
                         <span>Vessel Schedules</span>
                     </a>
-                     <a href="" class="_app">
+                     <a href="http://172.16.0.253/news" class="_app">
                         <img src="img/news.png"/>
                         <span>News</span>
                     </a>
